re-change fakerphp

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "fakerphp/faker": "^1.17",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
@@ -13,8 +14,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "qirolab/laravel-reactions": "dev-master",
-        "fakerphp/faker": "^1.9.1"
+        "qirolab/laravel-reactions": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
